app/components/modules/Alert.module.scss
@import "variables";

.alert {
  z-index: 100;
  position: fixed;
  top: 10px;
  right: 10px;
  min-height: 50px;
  width: 30vw;
  opacity: 0.9;

  padding: 1em;
  border: 5px solid $base-color;
  background-color: #ffcf33;
  animation: show 0.5s forwards ease-in-out;

  & > p {
    margin: 0;
  }

  &__close {
    display: block;
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: pointer;
    user-select: none;
    transform: scaleX(1.2);
  }

  &Hidden {
    animation: hide 0.5s forwards ease-in-out;
  }
}

@keyframes show {
  0% {
    opacity: 0;
    transform: translateY(-150px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes hide {
  0% {
    opacity: 1;
    transform: translateY(0);
  }
  100% {
    opacity: 0;
    transform: translateY(-150px);
  }
}

